Msg animation bug squashed

--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -166,7 +166,7 @@
                     font-size: 1.3em;
                     height: 1em;
                     margin-bottom: .3em;
-                    transition: margin-bottom 300ms, font 300ms;
+                    transition: all 300ms;
                     transition-delay: 200ms;
                 }
             }
